--- a/src/components/Comment/styles.module.scss
+++ b/src/components/Comment/styles.module.scss
@@ -50,7 +50,7 @@
                 top: 0px;
                 right: 0px;
                 transform: translateY(70%);
-                z-index: 999;
+                z-index: 198;
             }
         }
 
