--- a/src/components/Figure/SourceRef/styles.module.scss
+++ b/src/components/Figure/SourceRef/styles.module.scss
@@ -5,8 +5,8 @@
     border-radius: 8px;
     padding: 2px 4px;
     cursor: pointer;
-    order: 999;
-    z-index: 999;
+    order: 199;
+    z-index: 199;
 
     &:hover {
         background-color: var(--ifm-color-info-lightest);
