--- a/src/components/Video.module.scss
+++ b/src/components/Video.module.scss
@@ -14,7 +14,7 @@
         position: absolute;
         top: 0px;
         right: 0px;
-        z-index: 999;
+        z-index: 199;
     }
 }
 
